// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scatter using Canvas should handle event mouseover correctly: ADD_DROPLINE action 1`] = `
Array [
  Object {
    "payload": Object {
      "cx": 25,
      "cy": 25,
      "r1": 5,
      "r2": 9,
      "stroke": "rgba(153, 193, 220, 0.7)",
    },
    "type": "EVENT.ADD_MARKER",
  },
]
`;

exports[`Scatter using Canvas should handle event mouseover correctly: ADD_DROPLINE action 2`] = `
Array [
  Object {
    "payload": Object {
      "color": "rgba(153, 193, 220, 0.7)",
      "isHorizontal": true,
      "x1": 16,
      "x2": 0,
      "y1": 25,
      "y2": 25,
    },
    "type": "EVENT.ADD_DROPLINE",
  },
]
`;

exports[`Scatter using Canvas should handle event mouseover correctly: ADD_MARKER action 1`] = `
Array [
  Object {
    "payload": FakeMouseEvent {
      "isTrusted": false,
      "offsetX": 0,
      "offsetY": 0,
      "pageX": 25,
      "pageY": 25,
      "x": 0,
      "y": 0,
    },
    "type": "EVENT.MOUSE_MOVE",
  },
]
`;

exports[`Scatter using SVG should handle event mouseexit correctly: REMOVE_DROPLINE action 1`] = `
Array [
  Object {
    "payload": Object {
      "color": "rgba(153, 193, 220, 0.7)",
      "isHorizontal": true,
      "x1": 21,
      "x2": 0,
      "y1": 25,
      "y2": 25,
    },
    "type": "EVENT.REMOVE_DROPLINE",
  },
]
`;

exports[`Scatter using SVG should handle event mouseexit correctly: REMOVE_DROPLINE action 2`] = `
Array [
  Object {
    "payload": Object {
      "color": "rgba(153, 193, 220, 0.7)",
      "isVertical": true,
      "x1": 25,
      "x2": 25,
      "y1": 29,
      "y2": 0,
    },
    "type": "EVENT.REMOVE_DROPLINE",
  },
]
`;

exports[`Scatter using SVG should handle event mouseexit correctly: REMOVE_MARKER action 1`] = `
Array [
  Object {
    "payload": Object {
      "cx": 25,
      "cy": 25,
      "r1": 0,
      "r2": 4,
      "stroke": "rgba(153, 193, 220, 0.7)",
    },
    "type": "EVENT.REMOVE_MARKER",
  },
]
`;

exports[`Scatter using SVG should handle event mouseover correctly: ADD_DROPLINE action 1`] = `
Array [
  Object {
    "payload": Object {
      "color": "rgba(153, 193, 220, 0.7)",
      "isHorizontal": true,
      "x1": 21,
      "x2": 0,
      "y1": 25,
      "y2": 25,
    },
    "type": "EVENT.ADD_DROPLINE",
  },
]
`;

exports[`Scatter using SVG should handle event mouseover correctly: ADD_DROPLINE action 2`] = `
Array [
  Object {
    "payload": Object {
      "color": "rgba(153, 193, 220, 0.7)",
      "isVertical": true,
      "x1": 25,
      "x2": 25,
      "y1": 29,
      "y2": 0,
    },
    "type": "EVENT.ADD_DROPLINE",
  },
]
`;

exports[`Scatter using SVG should handle event mouseover correctly: ADD_MARKER action 1`] = `
Array [
  Object {
    "payload": Object {
      "cx": 25,
      "cy": 25,
      "r1": 0,
      "r2": 4,
      "stroke": "rgba(153, 193, 220, 0.7)",
    },
    "type": "EVENT.ADD_MARKER",
  },
]
`;

exports[`Scatter using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot scatter"
    >
      <circle
        class="scatter-point"
        cx="25"
        cy="25"
        r="0"
        style="stroke: rgb(107, 135, 154); fill: rgba(153, 193, 220, 0.7); opacity: 0.7;"
      />
      <circle
        class="scatter-point"
        cx="50"
        cy="50"
        r="0"
        style="stroke: rgb(107, 135, 154); fill: rgba(153, 193, 220, 0.7); opacity: 0.7;"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Scatter using SVG should skip rendering if there is no x scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot scatter"
    />
  </svg>
</DocumentFragment>
`;

exports[`Scatter using SVG should skip rendering if there is no y scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot scatter"
    />
  </svg>
</DocumentFragment>
`;
